--- a/config/CEM_CUB.yaml
+++ b/config/CEM_CUB.yaml
@@ -1,7 +1,9 @@
+run_name: CEM_CUB
 seed_everything: 42
-
+adv_patience: 30
 trainer:
   max_epochs: 1000
+  log_every_n_steps: 1
   logger:
     class_path: aim.pytorch_lightning.AimLogger
     init_args:
@@ -15,7 +17,7 @@ trainer:
         save_top_k: 1
         mode: max
         save_weights_only: True
-    - class_path: callbacks.AdversarialEarlyStop
+    - class_path: lightning.pytorch.callbacks.EarlyStopping
       init_args:
         monitor: val_acc
         mode: max
