--- a/config/CEM_CUB.yaml
+++ b/config/CEM_CUB.yaml
@@ -1,6 +1,5 @@
 run_name: CEM_CUB
 seed_everything: 42
-adv_patience: 30
 trainer:
   max_epochs: 1000
   log_every_n_steps: 1
@@ -12,11 +11,12 @@ trainer:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
         monitor: val_acc
-        dirpath: checkpoints/
+        dirpath: saved_models/
         filename: CEM_CUB
         save_top_k: 1
         mode: max
         save_weights_only: True
+        enable_version_counter: False
     - class_path: lightning.pytorch.callbacks.EarlyStopping
       init_args:
         monitor: val_acc
