--- a/config/Adv_ResNet_CUB.yaml
+++ b/config/Adv_ResNet_CUB.yaml
@@ -11,14 +11,14 @@ trainer:
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
-        monitor: val_acc
+        monitor: val_acc_epoch
         dirpath: checkpoints/
         filename: Adv_ResNet_CUB
         save_top_k: 1
         mode: max
     - class_path: lightning.pytorch.callbacks.EarlyStopping
       init_args:
-        monitor: val_acc
+        monitor: val_acc_epoch
         mode: max
         min_delta: 0.001
         patience: 30
