--- a/config/ResNet_CUB.yaml
+++ b/config/ResNet_CUB.yaml
@@ -11,8 +11,8 @@ trainer:
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
-        monitor: val_acc_epoch
-        dirpath: checkpoints/
+        monitor: val_acc
+        dirpath: saved_models/
         filename: ResNet_CUB
         save_top_k: 1
         mode: max
@@ -20,7 +20,7 @@ trainer:
         enable_version_counter: False
     - class_path: lightning.pytorch.callbacks.EarlyStopping
       init_args:
-        monitor: val_acc_epoch
+        monitor: val_acc
         mode: max
         min_delta: 0.001
         patience: 10
