--- a/config/VCBM_CUB.yaml
+++ b/config/VCBM_CUB.yaml
@@ -10,7 +10,7 @@ trainer:
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
-        monitor: val_acc_epoch
+        monitor: val_acc
         dirpath: saved_models/
         filename: VCBM_CUB
         save_top_k: 1
@@ -19,7 +19,7 @@ trainer:
         enable_version_counter: False
     - class_path: lightning.pytorch.callbacks.EarlyStopping
       init_args:
-        monitor: val_acc_epoch
+        monitor: val_acc
         mode: max
         min_delta: 0.001
         patience: 10
