--- a/config/RCBM_CUB.yaml
+++ b/config/RCBM_CUB.yaml
@@ -1,28 +1,5 @@
 run_name: RCBM_CUB
 seed_everything: 42
-trainer:
-  max_epochs: 1000
-  log_every_n_steps: 1
-  logger:
-    class_path: aim.pytorch_lightning.AimLogger
-    init_args:
-      run_name: RCBM_CUB
-  callbacks:
-    - class_path: lightning.pytorch.callbacks.ModelCheckpoint
-      init_args:
-        monitor: val_acc
-        dirpath: saved_models/
-        filename: RCBM_CUB
-        save_top_k: 1
-        mode: max
-        save_weights_only: True
-        enable_version_counter: False
-    - class_path: lightning.pytorch.callbacks.EarlyStopping
-      init_args:
-        monitor: val_acc
-        mode: max
-        min_delta: 0.001
-        patience: 10
 
 model:
   class_path: model.RCBM
@@ -30,6 +7,9 @@ model:
     base: resnet50
     num_classes: 200
     num_concepts: 112
+
+adv_hparams:
+  step_size: [10, 30, 60]
 
 data:
   class_path: dataset.CUB
