--- a/config/ResNet_CUB.yaml
+++ b/config/ResNet_CUB.yaml
@@ -1,33 +1,12 @@
 run_name: ResNet_CUB
 seed_everything: 42
 
-trainer:
-  max_epochs: 1000
-  log_every_n_steps: 1
-  logger:
-    class_path: aim.pytorch_lightning.AimLogger
-    init_args:
-      run_name: ResNet_CUB
-  callbacks:
-    - class_path: lightning.pytorch.callbacks.ModelCheckpoint
-      init_args:
-        monitor: val_acc
-        dirpath: saved_models/
-        filename: ResNet_CUB
-        save_top_k: 1
-        mode: max
-        save_weights_only: True
-        enable_version_counter: False
-    - class_path: lightning.pytorch.callbacks.EarlyStopping
-      init_args:
-        monitor: val_acc
-        mode: max
-        min_delta: 0.001
-        patience: 10
-
 model:
   class_path: model.ResNet
   init_args:
+    num_classes: 200
+
+adv_hparams:
     num_classes: 200
 
 data:
