--- a/config/VCBM_CUB.yaml
+++ b/config/VCBM_CUB.yaml
@@ -7,9 +7,15 @@ model:
     base: resnet50
     num_classes: 200
     num_concepts: 112
+    use_pretrained: True
+    concept_weight: 5
+    lr: 0.01
+    optimizer: SGD
+    vib_lambda: 0.01
+    scheduler_patience: 5
 
 adv_hparams:
-  step_size: [10, 30, 60]
+  scheduler_patience: 20
 
 data:
   class_path: dataset.CUB
