--- a/config/CUB/CBM_AT.yaml
+++ b/config/CUB/CBM_AT.yaml
@@ -1,5 +1,6 @@
-run_name: CBM_CUB
+run_name: CUB_CBM_AT
 seed_everything: 42
+patience: 50
 
 model:
   class_path: model.CBM
@@ -8,14 +9,13 @@ model:
     num_classes: 200
     num_concepts: 112
     use_pretrained: True
-    concept_weight: 5
-    lr: 0.01
+    concept_weight: 10
+    lr: 0.1
     optimizer: SGD
-    scheduler_patience: 5
-
-adv_hparams:
-  lr: 0.1
-  scheduler_patience: 50
+    scheduler_patience: 20
+    adv_mode: True
+    adv_strategy: AT
+    use_concept_logits: False
 
 data:
   class_path: dataset.CUB
