--- a/config/CUB/AT/CBM.yaml
+++ b/config/CUB/AT/CBM.yaml
@@ -1,16 +1,20 @@
-run_name: CUB_ResNet_AT
+run_name: CUB_CBM_AT
 seed_everything: 42
-patience: 50
+patience: 30
 
 model:
-  class_path: model.ResNet
+  class_path: model.CBM
   init_args:
+    base: resnet50
     num_classes: 200
+    num_concepts: 112
     use_pretrained: True
+    concept_weight: 10
     lr: 0.1
     optimizer: SGD
-    scheduler_patience: 20
+    scheduler_patience: 15
     adv_mode: True
+    adv_strategy: AT
 
 data:
   class_path: dataset.CUB
