--- a/config/CUB/AT/CEM.yaml
+++ b/config/CUB/AT/CEM.yaml
@@ -1,23 +1,21 @@
-run_name: VCBM_CUB
+run_name: CUB_CEM_AT
 seed_everything: 42
+patience: 30
 
 model:
-  class_path: model.VCBM
+  class_path: model.CEM
   init_args:
     base: resnet50
     num_classes: 200
     num_concepts: 112
     use_pretrained: True
-    concept_weight: 5
-    lr: 0.01
+    concept_weight: 10
+    lr: 0.1
     optimizer: SGD
-    vib_lambda: 0.01
-    scheduler_patience: 5
-
-adv_hparams:
-  vib_lambda: 1
-  lr: 0.1
-  scheduler_patience: 50
+    scheduler_patience: 15
+    adv_mode: True
+    adv_strategy: AT
+    embed_size: 16
 
 data:
   class_path: dataset.CUB
