--- a/config/CUB/AT/RCBM.yaml
+++ b/config/CUB/AT/RCBM.yaml
@@ -1,24 +1,21 @@
-run_name: RCEM_CUB
+run_name: CUB_RCBM_AT
 seed_everything: 42
+patience: 30
 
 model:
-  class_path: model.RCEM
+  class_path: model.RCBM
   init_args:
     base: resnet50
     num_classes: 200
     num_concepts: 112
     use_pretrained: True
-    concept_weight: 5
-    lr: 0.01
+    concept_weight: 10
+    lr: 0.1
     optimizer: SGD
-    embed_size: 16
+    scheduler_patience: 15
+    adv_mode: True
+    adv_strategy: AT
     vib_lambda: 0.01
-    scheduler_patience: 5
-
-adv_hparams:
-  vib_lambda: 1
-  lr: 0.1
-  scheduler_patience: 50
 
 data:
   class_path: dataset.CUB
