--- a/config/exp1/CUB/nonCBM.yaml
+++ b/config/exp1/CUB/nonCBM.yaml
@@ -14,7 +14,7 @@ model:
     lr: 0.1
     optimizer: SGD
     scheduler_arg: 50
-    adv_mode: True
+    adv_mode: False
     adv_strategy: AT
 
 data:
