--- a/config/CUB/CBM.yaml
+++ b/config/CUB/CBM.yaml
@@ -1,25 +1,21 @@
-run_name: exp1_CUB_nonCBM
 seed_everything: 42
 patience: 100
-adv: False
 
 model:
   class_path: model.CBM
   init_args:
-    base: resnet50
+    num_concepts: 256
     num_classes: 200
-    num_concepts: 112
+    real_concepts: 112
+    base: resnet50
     use_pretrained: True
-    concept_weight: 0
+    concept_weight: 0.01
     lr: 0.1
-    optimizer: SGD
     scheduler_arg: 30
-    adv_mode: False
-    adv_strategy: AT
+    adv_mode: True
 
 data:
   class_path: dataset.CUB
   init_args:
     data_path: ./data
     batch_size: 128
-    num_concepts: 112
