--- a/config/CUB/VCBM.yaml
+++ b/config/CUB/VCBM.yaml
@@ -1,22 +1,19 @@
-run_name: exp1_CUB_CEM
 seed_everything: 42
 patience: 100
-adv: False
 
 model:
-  class_path: model.CEM
+  class_path: model.VCBM
   init_args:
-    base: resnet50
-    num_classes: 200
     num_concepts: 112
+    num_classes: 200
+    real_concepts: 112
+    base: resnet50
     use_pretrained: True
     concept_weight: 0.01
     lr: 0.1
-    optimizer: SGD
     scheduler_arg: 30
     adv_mode: False
-    adv_strategy: AT
-    embed_size: 16
+    vib_lambda: 0.1
 
 data:
   class_path: dataset.CUB
