--- a/config/CUB/resCBM.yaml
+++ b/config/CUB/resCBM.yaml
@@ -1,21 +1,18 @@
-run_name: exp1_CUB_CBM
 seed_everything: 42
 patience: 100
-adv: False
 
 model:
-  class_path: model.CBM
+  class_path: model.resCBM
   init_args:
-    base: resnet50
-    num_classes: 200
     num_concepts: 112
+    num_classes: 200
+    real_concepts: 112
+    base: resnet50
     use_pretrained: True
     concept_weight: 0.01
     lr: 0.1
-    optimizer: SGD
     scheduler_arg: 30
     adv_mode: False
-    adv_strategy: AT
 
 data:
   class_path: dataset.CUB
