--- a/config/CUB/VCEM.yaml
+++ b/config/CUB/VCEM.yaml
@@ -11,8 +11,8 @@ model:
     use_pretrained: True
     concept_weight: 0.01
     lr: 0.1
-    scheduler_arg: 15
-    adv_mode: False
+    scheduler_arg: 10
+    adv_mode: True
     vib_lambda: 0.1
     embed_size: 16
 
