--- a/config/CUB/VQCBM.yaml
+++ b/config/CUB/VQCBM.yaml
@@ -11,8 +11,8 @@ model:
     use_pretrained: True
     concept_weight: 0.01
     lr: 0.1
-    scheduler_arg: 15
-    adv_mode: False
+    scheduler_arg: 10
+    adv_mode: True
     embedding_dim: 64
     codebook_size: 5120
     codebook_weight: 0.25
