--- a/config/CUB/VCBM.yaml
+++ b/config/CUB/VCBM.yaml
@@ -9,10 +9,10 @@ model:
     real_concepts: 112
     base: resnet50
     use_pretrained: True
-    concept_weight: 0.01
+    concept_weight: 1
     lr: 0.1
-    scheduler_arg: 15
-    adv_mode: False
+    scheduler_arg: 10
+    adv_mode: True
     vib_lambda: 0.1
 
 data:
