--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-lightning==2.4.0
-numpy==2.1.2
-pandas==2.2.3
-scikit_learn==1.4.1.post1
-torch==2.1.1
-torchmetrics==1.4.0
-torchvision==0.16.1
+lightning==2.5.0.post0
+numpy==2.2.1
+oss2==2.18.1
+Pillow==11.0.0
+scikit_learn==1.6.0
+torch==2.5.1
+torchmetrics==1.6.0
+torchvision==0.20.1
