--- a/config/CUB/CBM.yaml
+++ b/config/CUB/CBM.yaml
@@ -1,21 +1,22 @@
-seed_everything: 42
+seed: 42
 patience: 30
 
-model:
-  class_path: model.CBM
-  init_args:
-    num_classes: 200
-    num_concepts: 112
-    real_concepts: 112
-    base: resnet50
-    use_pretrained: True
-    concept_weight: 1
-    lr: 0.1
-    scheduler_arg: 10
-    adv_mode: True
+model: CBM
+base: resnet50
+use_pretrained: True
+concept_weight: 1
+lr: 0.1
+scheduler_arg: 10
+adv_mode: True
+hidden_dim: 0
+cbm_mode: hybrid
+adv_loss: combo
+mtl_mode: normal
 
-data:
-  class_path: dataset.CUB
-  init_args:
-    data_path: ./data
-    batch_size: 128
+data: CUB
+data_path: ./data
+batch_size: 128
+num_concepts: 112
+
+# CEM
+embed_size: 16
