--- a/config.yaml
+++ b/config.yaml
@@ -9,9 +9,14 @@ lr: 0.1
 scheduler_arg: 10
 adv_mode: True
 hidden_dim: 0
-cbm_mode: hybrid
-adv_loss: combo
-mtl_mode: normal
+cbm_mode: hybrid # "bool", "fuzzy", "hybrid"
+attacker: PGD
+attacker_args:
+  eps: 0.01569
+  alpha: 0.001569
+  steps: 10
+  adv_loss: ce # "ce", "bce", "combo"
+mtl_mode: normal # "normal", "equal", "ordered"
 
 dataset: CUB
 data_path: ./data
