--- a/config.yaml
+++ b/config.yaml
@@ -5,8 +5,17 @@ model: CBM
 base: resnet50
 use_pretrained: True
 concept_weight: 0.01
+optimizer: SGD
+optimizer_args:
+  momentum: 0
+  weight_decay: 0
 lr: 0.1
-scheduler_arg: 30
+scheduler: ReduceLROnPlateau
+scheduler_args:
+  mode: max
+  factor: 0.1
+  patience: 30
+  min_lr: 1e-4
 adv_mode: True
 hidden_dim: 0
 cbm_mode: hybrid # "bool", "fuzzy", "hybrid"
@@ -28,9 +37,9 @@ embed_size: 16
 # VIB
 vib_lambda: 0.01
 # VQ
-embedding_dim: 32
+embedding_dim: 64
 codebook_size: 5120
 codebook_weight: 0.25
 quantizer: EMA
 # gate
-use_gate: False
+use_gate: True
