--- a/exps/cub_adv_inceptionv3_backbone.yaml
+++ b/exps/cub_adv_inceptionv3_backbone.yaml
@@ -1,4 +1,11 @@
-experiment_name: cub_adv_inceptionv3_cbm
+experiment_name: cub_adv_inceptionv3_backbone
 model: backbone
 base: inceptionv3
 adv_mode: True
+
+patience: 200
+scheduler_args:
+  mode: max
+  factor: 0.1
+  patience: 100
+  min_lr: 0.0001
