--- a/exps/cub_adv_resnet_backbone.yaml
+++ b/exps/cub_adv_resnet_backbone.yaml
@@ -1,6 +1,6 @@
-experiment_name: cub_adv_inceptionv3_cbm
-model: CBM
-base: inceptionv3
+experiment_name: cub_adv_resnet_backbone
+model: backbone
+base: resnet50
 adv_mode: True
 
 patience: 200
