--- a/exps/cub_adv_resnet_cbm.yaml
+++ b/exps/cub_adv_resnet_cbm.yaml
@@ -1,6 +1,6 @@
-experiment_name: cub_adv_inceptionv3_cbm
+experiment_name: cub_adv_resnet_cbm
 model: CBM
-base: inceptionv3
+base: resnet50
 adv_mode: True
 
 patience: 200
