--- a/config.yaml
+++ b/config.yaml
@@ -20,12 +20,12 @@ scheduler_args:
 adv_mode: adv
 hidden_dim: 0
 cbm_mode: hybrid # "bool", "fuzzy", "hybrid"
-attacker: PGD
-attacker_args:
+attacker: apgd
+train_atk_args:
   eps: 0.01569
-  alpha: 0.001569
-  steps: 10
-  adv_loss: ce # "ce", "bce", "combo"
+eval_atk_args:
+  eps: 0.01569
+adv_loss: ce # "ce", "bce", "combo"
 mtl_mode: normal # "normal", "equal", "ordered"
 
 dataset: CUB
