--- a/config.yaml
+++ b/config.yaml
@@ -46,6 +46,8 @@ quantizer: EMA
 use_gate: nogate
 # CL
 cl_weight: 0.1
+# spectral
+spectral_weight: 0
 
 intervene_budget: 0
 max_intervene_budget: 29
