--- a/config.yaml
+++ b/config.yaml
@@ -48,6 +48,8 @@ use_gate: nogate
 cl_weight: 0.1
 # spectral
 spectral_weight: 0
+# adversarial invariant
+invariant_lambda: 0
 
 intervene_budget: 0
 max_intervene_budget: 29
