--- a/config.yaml
+++ b/config.yaml
@@ -25,7 +25,7 @@ plateau_args:
 weighted_bce: true
 lpgd_args: {}
 cpgd_args: {}
-jpgd_args: {}
+jpgd_args: {jpgd_lambda: 0.01}
 aa_args: {}
 
 hidden_dim: 0
