--- a/config.yaml
+++ b/config.yaml
@@ -26,7 +26,7 @@ weighted_bce: true
 lpgd_args: {}
 cpgd_args: {}
 jpgd_args: {jpgd_lambda: 0.01}
-aa_args: {}
+aa_args: {eps: 0.0156862745}
 
 hidden_dim: 0
 res_dim: 0
@@ -34,7 +34,6 @@ cbm_mode: hybrid # "bool", "fuzzy", "hybrid"
 mtl_mode: normal # "normal", "equal", "ordered"
 train_mode: Std
 add_residual: false
-res_alpha: 0.1
 
 dataset: CUB
 data_path: ./data
@@ -45,7 +44,7 @@ resol: 224
 embed_dim: 16
 
 # vib
-vib: 0.01
+vib: 0.1
 
 # hsic
 hsic_weight: 0
