--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 autoattack==0.1
-lightning==2.5.3
-pandas==2.3.2
-scikit_learn==1.7.1
+lightning==2.6.0
+numpy==2.4.0
+pandas==2.3.3
+Pillow==12.0.0
+PyYAML==6.0.3
+scikit_learn==1.8.0
+swanlab==0.7.5
+torch==2.9.1
+torchmetrics==1.8.2
+torchvision==0.24.1
